# src/routes/index.ts
@@ -17,7 +17,8 @@ import { AttendeeRoutes } from '../app/modules/attendee/attendee.route'
 import { MeetingRoutes } from '../app/modules/meeting/meeting.route'
 import { LiveStreamRoutes } from '../app/modules/livestream/livestream.route'
 import { ChatmessageRoutes } from '../app/modules/chatmessage/chatmessage.route'
-import { LiveStreamWebhookRoutes } from '../app/modules/livestream/liveStream.webhook.routes'
+import { LiveStreamWebhookRoutes } from '../app/modules/livestream/livestream.webhook.routes'
+import { FollowRoutes } from '../app/modules/follow/follow.route'
 
 const router = express.Router()
 
@@ -41,6 +42,7 @@ const apiRoutes: { path: string; route: Router }[] = [
   { path: '/livestream', route: LiveStreamRoutes },
   { path: '/livestream/webhook', route: LiveStreamWebhookRoutes },
   { path: '/chatmessage', route: ChatmessageRoutes },
+  { path: '/follow', route: FollowRoutes },
 ]
 
 apiRoutes.forEach(route => {
